update reference to point to published early online release rather than arxiv

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -180,13 +180,13 @@
     year 		 = {2022},   
     note 		 = {Accessed on September 9, 2023} 
 }
-@misc{loveday2023userfocused,
-      title={A User-Focused Approach to Evaluating Probabilistic and Categorical Forecasts}, 
-      author={Nicholas Loveday and Robert Taggart and Mohammadreza Khanarmuei},
-      year={2023},
-      eprint={2311.18258},
-      archivePrefix={arXiv},
-      primaryClass={stat.AP}
+@article{loveday2024user,
+  title={A User-Focused Approach to Evaluating Probabilistic and Categorical Forecasts},
+  author={Loveday, Nicholas and Taggart, Robert and Khanarmuei, Mohammadreza},
+  journal={Weather and Forecasting},
+  year={2024},
+  publisher={American Meteorological Society},
+  doi={10.1175/WAF-D-23-0201.1}
 }
 @article{nipen2023verif,
   title={Verif: A weather-prediction verification tool for effective product development},
