update jive paper doi

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -227,7 +227,8 @@
       year={2024},
       eprint={2404.18429},
       archivePrefix={arXiv},
-      primaryClass={physics.ao-ph}
+      primaryClass={physics.ao-ph},
+	  doi={10.48550/arXiv.2404.18429}
 }
 @article{Ferro_2013, 
 	title={Fair scores for ensemble forecasts: Fair Scores for Ensemble Forecasts}, 
