--- a/tutorials/NSE.ipynb
+++ b/tutorials/NSE.ipynb
@@ -23,6 +23,10 @@
     "\n",
     "In hydrological modeling, the Nash–Sutcliffe Efficiency (NSE) is essential for assessing model performance. An NSE of 1 indicates perfect prediction, while 0 suggests the model performs as well as predicting the mean of the data. Negative values imply the observed mean is a better predictor. NSE values closer to 1 denote superior predictive ability. In regression analyses, NSE parallels the coefficient of determination (R²), representing model fit on a scale from 0 to 1.\n",
     "\n",
+    "Reference:\n",
+    "- https://hess.copernicus.org/articles/26/4801/2022/\n",
+    "- \n",
+    "\n",
     "## Using the `nse` Function\n",
     "\n",
     "Let's start by importing the `nse` function from our module and exploring its usage with different types of input data."
@@ -30,11 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scores.continuous import nse\n",
+    "from scores.continuous.standard_impl import nse\n",
     "import numpy as np\n",
     "import xarray as xr\n",
     "import pandas as pd\n",
@@ -51,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NSE for Xarray DataArray: <xarray.DataArray ()>\n",
+      "NSE for Xarray DataArray: <xarray.DataArray ()> Size: 8B\n",
       "array(0.5)\n"
      ]
     }
@@ -79,15 +83,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NSE for large Xarray DataArrays: <xarray.DataArray ()>\n",
-      "array(-1.00120337)\n"
+      "NSE for large Xarray DataArrays: <xarray.DataArray ()> Size: 8B\n",
+      "array(-0.9995806)\n"
      ]
     }
    ],
@@ -115,14 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NSE for angular types: <xarray.DataArray ()>\n",
+      "NSE for angular types: <xarray.DataArray ()> Size: 8B\n",
       "array(0.5)\n"
      ]
     }
@@ -143,14 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NSE with weights types: <xarray.DataArray ()>\n",
+      "NSE with weights types: <xarray.DataArray ()> Size: 8B\n",
       "array(0.5)\n"
      ]
     }
@@ -172,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,14 +220,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NSE for station: <xarray.DataArray ()>\n",
+      "NSE for station: <xarray.DataArray ()> Size: 8B\n",
       "array(0.5)\n"
      ]
     }
@@ -241,12 +245,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example 5**: 3D Array: Ensemble, Station and Time"
+    "**Example 6**: 3D Array: Ensemble, Station and Time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,14 +301,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NSE for station: <xarray.DataArray ()>\n",
+      "NSE for station: <xarray.DataArray ()> Size: 8B\n",
       "array(0.5)\n"
      ]
     }
@@ -321,12 +325,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example 6**: 3D Array: Time, Station and lead times"
+    "**Example 7**: 3D Array: Time, Station and lead times"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -451,12 +455,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example 7**: 4D Array: Time, Station, lead times and ensemble"
+    "**Example 8**: 4D Array: Time, Station, lead times and ensemble"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4
  },
