run black on all the files

--- a/tutorials/NSE.ipynb
+++ b/tutorials/NSE.ipynb
@@ -7,7 +7,7 @@
     "# Tutorial: Nash-Sutcliffe Efficiency (NSE) Calculation\n",
     "In this tutorial, we will explore the Nash-Sutcliffe Efficiency (NSE) calculation function `nse`. NSE is a widely used metric in hydrology and other fields to evaluate the performance of a model by comparing its predictions to observed data.\n",
     "\n",
-    "## Introduction\n",
+    "#### NSE\n",
     "\n",
     "The Nash-Sutcliffe Efficiency (NSE) is defined as:\n",
     "\n",
@@ -97,17 +97,17 @@
    ],
    "source": [
     "fcst_large = xr.DataArray(\n",
-    "    data=np.random.random_sample((1000, 1000)) * 360, \n",
-    "    dims=[\"space\", \"time\"], \n",
-    "    coords=[np.arange(0, 1000),  np.arange(0, 1000)]\n",
+    "    data=np.random.random_sample((1000, 1000)) * 360,\n",
+    "    dims=[\"space\", \"time\"],\n",
+    "    coords=[np.arange(0, 1000), np.arange(0, 1000)],\n",
     ")\n",
     "obs_large = xr.DataArray(\n",
-    "    data=np.random.random_sample((1000, 1000)) * 360, \n",
-    "    dims=[\"space\", \"time\"], \n",
-    "    coords=[np.arange(0, 1000),  np.arange(0, 1000)]\n",
+    "    data=np.random.random_sample((1000, 1000)) * 360,\n",
+    "    dims=[\"space\", \"time\"],\n",
+    "    coords=[np.arange(0, 1000), np.arange(0, 1000)],\n",
     ")\n",
     "nse_large = nse(fcst_large, obs_large)\n",
-    "print(\"NSE for large Xarray DataArrays:\", nse_large)\n"
+    "print(\"NSE for large Xarray DataArrays:\", nse_large)"
    ]
   },
   {
@@ -134,8 +134,8 @@
    "source": [
     "fcst_xr = xr.DataArray([3, 4, 5, 6, 7])\n",
     "obs_xr = xr.DataArray([2, 3, 4, 5, 6])\n",
-    "nse_anular = nse(fcst_xr, obs_xr,angular=True)\n",
-    "print(\"NSE for angular types:\", nse_anular )"
+    "nse_anular = nse(fcst_xr, obs_xr, angular=True)\n",
+    "print(\"NSE for angular types:\", nse_anular)"
    ]
   },
   {
@@ -163,8 +163,8 @@
     "fcst_xr = xr.DataArray([3, 4, 5, 6, 7])\n",
     "obs_xr = xr.DataArray([2, 3, 4, 5, 6])\n",
     "weights = np.array([1, 2, 3, 2, 1])\n",
-    "nse_weights=nse(fcst_xr,obs_xr, weights=weights)\n",
-    "print(\"NSE with weights types:\", nse_weights )\n"
+    "nse_weights = nse(fcst_xr, obs_xr, weights=weights)\n",
+    "print(\"NSE with weights types:\", nse_weights)"
    ]
   },
   {
@@ -182,37 +182,25 @@
    "source": [
     "def create_synthetic_2d_data():\n",
     "    # Define dimensions\n",
-    "    time = pd.date_range('2024-01-01', periods=5, freq='D')\n",
-    "    stations = ['Station1', 'Station2', 'Station3']\n",
+    "    time = pd.date_range(\"2024-01-01\", periods=5, freq=\"D\")\n",
+    "    stations = [\"Station1\", \"Station2\", \"Station3\"]\n",
     "\n",
     "    # Use specified forecast and observed values\n",
-    "    forecast_data = np.array([[3, 4, 5, 6, 7],\n",
-    "                              [3, 4, 5, 6, 7],\n",
-    "                              [3, 4, 5, 6, 7]]).T  # Transpose to align with dimensions (time, station)\n",
-    "    observed_data = np.array([[2, 3, 4, 5, 6],\n",
-    "                              [2, 3, 4, 5, 6],\n",
-    "                              [2, 3, 4, 5, 6]]).T  # Transpose to align with dimensions (time, station)\n",
+    "    forecast_data = np.array(\n",
+    "        [[3, 4, 5, 6, 7], [3, 4, 5, 6, 7], [3, 4, 5, 6, 7]]\n",
+    "    ).T  # Transpose to align with dimensions (time, station)\n",
+    "    observed_data = np.array(\n",
+    "        [[2, 3, 4, 5, 6], [2, 3, 4, 5, 6], [2, 3, 4, 5, 6]]\n",
+    "    ).T  # Transpose to align with dimensions (time, station)\n",
     "\n",
     "    # Create forecast DataArray\n",
     "    forecast_da = xr.DataArray(\n",
-    "        forecast_data,\n",
-    "        coords={\n",
-    "            'time': time,\n",
-    "            'station': stations\n",
-    "        },\n",
-    "        dims=['time', 'station'],\n",
-    "        name='forecast'\n",
+    "        forecast_data, coords={\"time\": time, \"station\": stations}, dims=[\"time\", \"station\"], name=\"forecast\"\n",
     "    )\n",
     "\n",
     "    # Create observed DataArray\n",
     "    observed_da = xr.DataArray(\n",
-    "        observed_data,\n",
-    "        coords={\n",
-    "            'time': time,\n",
-    "            'station': stations\n",
-    "        },\n",
-    "        dims=['time', 'station'],\n",
-    "        name='observed'\n",
+    "        observed_data, coords={\"time\": time, \"station\": stations}, dims=[\"time\", \"station\"], name=\"observed\"\n",
     "    )\n",
     "\n",
     "    return forecast_da, observed_da"
@@ -233,9 +221,9 @@
     }
    ],
    "source": [
-    " # Create synthetic forecast and observed DataArrays\n",
+    "# Create synthetic forecast and observed DataArrays\n",
     "fcst_xr, obs_xr = create_synthetic_2d_data()\n",
-    "    \n",
+    "\n",
     "# Calculate the NSE for the test case\n",
     "nse_value = nse(fcst_xr, obs_xr)\n",
     "print(\"NSE for station:\", nse_value)"
@@ -256,17 +244,17 @@
    "source": [
     "def create_synthetic_3d_data():\n",
     "    # Define dimensions\n",
-    "    time = pd.date_range('2024-01-01', periods=5, freq='D')\n",
-    "    stations = ['Station1', 'Station2', 'Station3']\n",
-    "    ensemble = ['Ensemble1', 'Ensemble2', 'Ensemble3']\n",
+    "    time = pd.date_range(\"2024-01-01\", periods=5, freq=\"D\")\n",
+    "    stations = [\"Station1\", \"Station2\", \"Station3\"]\n",
+    "    ensemble = [\"Ensemble1\", \"Ensemble2\", \"Ensemble3\"]\n",
     "\n",
     "    # Use specified forecast and observed values\n",
-    "    forecast_data = np.array([[3, 4, 5, 6, 7],\n",
-    "                              [3, 4, 5, 6, 7],\n",
-    "                              [3, 4, 5, 6, 7]]).T  # Transpose to align with dimensions (time, station)\n",
-    "    observed_data = np.array([[2, 3, 4, 5, 6],\n",
-    "                              [2, 3, 4, 5, 6],\n",
-    "                              [2, 3, 4, 5, 6]]).T  # Transpose to align with dimensions (time, station)\n",
+    "    forecast_data = np.array(\n",
+    "        [[3, 4, 5, 6, 7], [3, 4, 5, 6, 7], [3, 4, 5, 6, 7]]\n",
+    "    ).T  # Transpose to align with dimensions (time, station)\n",
+    "    observed_data = np.array(\n",
+    "        [[2, 3, 4, 5, 6], [2, 3, 4, 5, 6], [2, 3, 4, 5, 6]]\n",
+    "    ).T  # Transpose to align with dimensions (time, station)\n",
     "\n",
     "    # Repeat data for each ensemble member\n",
     "    forecast_data = np.repeat(forecast_data[np.newaxis, ...], len(ensemble), axis=0)\n",
@@ -275,25 +263,17 @@
     "    # Create forecast DataArray\n",
     "    forecast_da = xr.DataArray(\n",
     "        forecast_data,\n",
-    "        coords={\n",
-    "            'ensemble': ensemble,\n",
-    "            'time': time,\n",
-    "            'station': stations\n",
-    "        },\n",
-    "        dims=['ensemble', 'time', 'station'],\n",
-    "        name='forecast'\n",
+    "        coords={\"ensemble\": ensemble, \"time\": time, \"station\": stations},\n",
+    "        dims=[\"ensemble\", \"time\", \"station\"],\n",
+    "        name=\"forecast\",\n",
     "    )\n",
     "\n",
     "    # Create observed DataArray\n",
     "    observed_da = xr.DataArray(\n",
     "        observed_data,\n",
-    "        coords={\n",
-    "            'ensemble': ensemble,\n",
-    "            'time': time,\n",
-    "            'station': stations\n",
-    "        },\n",
-    "        dims=['ensemble', 'time', 'station'],\n",
-    "        name='observed'\n",
+    "        coords={\"ensemble\": ensemble, \"time\": time, \"station\": stations},\n",
+    "        dims=[\"ensemble\", \"time\", \"station\"],\n",
+    "        name=\"observed\",\n",
     "    )\n",
     "\n",
     "    return forecast_da, observed_da"
@@ -315,7 +295,7 @@
    ],
    "source": [
     "fcst_xr, obs_xr = create_synthetic_3d_data()\n",
-    "    \n",
+    "\n",
     "# Calculate the NSE for the test case\n",
     "nse_value = nse(fcst_xr, obs_xr)\n",
     "print(\"NSE for station:\", nse_value)"
@@ -338,12 +318,13 @@
     "import pandas as pd\n",
     "import xarray as xr\n",
     "\n",
+    "\n",
     "def create_synthetic_deterministic_data():\n",
     "    # Define dimensions\n",
-    "    time = pd.date_range('2024-01-01', '2024-01-31', freq='D')\n",
-    "    stations = ['Station1', 'Station2', 'Station3', 'Station4', 'Station5']\n",
+    "    time = pd.date_range(\"2024-01-01\", \"2024-01-31\", freq=\"D\")\n",
+    "    stations = [\"Station1\", \"Station2\", \"Station3\", \"Station4\", \"Station5\"]\n",
     "    lead_times_forecast = np.arange(1, 8)  # Lead times from 1 to 7 for forecast\n",
-    "    lead_times_observed = np.array([1])    # Lead time of 1 day for observed data\n",
+    "    lead_times_observed = np.array([1])  # Lead time of 1 day for observed data\n",
     "\n",
     "    # Generate synthetic hydrograph data\n",
     "    np.random.seed(0)  # For reproducibility\n",
@@ -362,25 +343,17 @@
     "    # Create forecast DataArray\n",
     "    forecast_da = xr.DataArray(\n",
     "        forecast_data,\n",
-    "        coords={\n",
-    "            'time': time,\n",
-    "            'station': stations,\n",
-    "            'lead_time': lead_times_forecast\n",
-    "        },\n",
-    "        dims=['time', 'station', 'lead_time'],\n",
-    "        name='forecast'\n",
+    "        coords={\"time\": time, \"station\": stations, \"lead_time\": lead_times_forecast},\n",
+    "        dims=[\"time\", \"station\", \"lead_time\"],\n",
+    "        name=\"forecast\",\n",
     "    )\n",
     "\n",
     "    # Create observed DataArray\n",
     "    observed_da = xr.DataArray(\n",
     "        observed_data,\n",
-    "        coords={\n",
-    "            'time': time,\n",
-    "            'station': stations,\n",
-    "            'lead_time': lead_times_observed\n",
-    "        },\n",
-    "        dims=['time', 'station', 'lead_time'],\n",
-    "        name='observed'\n",
+    "        coords={\"time\": time, \"station\": stations, \"lead_time\": lead_times_observed},\n",
+    "        dims=[\"time\", \"station\", \"lead_time\"],\n",
+    "        name=\"observed\",\n",
     "    )\n",
     "\n",
     "    return forecast_da, observed_da"
@@ -443,12 +416,10 @@
     }
    ],
    "source": [
-    "for ilead in forecast_da['lead_time'].values:\n",
-    "    cur_fcst_da = forecast_da.sel(lead_time=ilead )\n",
+    "for ilead in forecast_da[\"lead_time\"].values:\n",
+    "    cur_fcst_da = forecast_da.sel(lead_time=ilead)\n",
     "    nse_value = nse(cur_fcst_da, observed_da).values\n",
-    "    print(f\"NSE for leadtime {ilead}:\", nse_value)\n",
-    "    \n",
-    "    "
+    "    print(f\"NSE for leadtime {ilead}:\", nse_value)"
    ]
   },
   {
@@ -464,15 +435,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def create_synthetic_ensemble_data():\n",
     "    # Define dimensions\n",
-    "    time = pd.date_range('2024-01-01', '2024-01-31', freq='D')\n",
-    "    stations = ['Station1', 'Station2', 'Station3', 'Station4', 'Station5']\n",
+    "    time = pd.date_range(\"2024-01-01\", \"2024-01-31\", freq=\"D\")\n",
+    "    stations = [\"Station1\", \"Station2\", \"Station3\", \"Station4\", \"Station5\"]\n",
     "    lead_times_forecast = np.arange(1, 8)  # Lead times from 1 to 7 for forecast\n",
-    "    lead_times_observed = np.array([1])    # Lead time of 1 day for observed data\n",
-    "    ensemble = [f'Ensemble{i}' for i in range(1, 21)]  # Ensemble members from Ensemble1 to Ensemble20\n",
+    "    lead_times_observed = np.array([1])  # Lead time of 1 day for observed data\n",
+    "    ensemble = [f\"Ensemble{i}\" for i in range(1, 21)]  # Ensemble members from Ensemble1 to Ensemble20\n",
     "\n",
     "    # Generate synthetic hydrograph data\n",
     "    np.random.seed(0)  # For reproducibility\n",
@@ -481,7 +450,9 @@
     "    base_flow = 30\n",
     "\n",
     "    # Adding random fluctuations around the base flow for forecast and observed data\n",
-    "    forecast_data = base_flow + np.random.randint(0, 301, size=(len(time), len(stations), len(lead_times_forecast), len(ensemble)))\n",
+    "    forecast_data = base_flow + np.random.randint(\n",
+    "        0, 301, size=(len(time), len(stations), len(lead_times_forecast), len(ensemble))\n",
+    "    )\n",
     "    observed_data = base_flow + np.random.randint(0, 301, size=(len(time), len(stations), len(lead_times_observed)))\n",
     "\n",
     "    # Clip the data to ensure it stays within a certain range\n",
@@ -491,29 +462,20 @@
     "    # Create forecast DataArray\n",
     "    forecast_da = xr.DataArray(\n",
     "        forecast_data,\n",
-    "        coords={\n",
-    "            'time': time,\n",
-    "            'station': stations,\n",
-    "            'lead_time': lead_times_forecast,\n",
-    "            'ensemble': ensemble\n",
-    "        },\n",
-    "        dims=['time', 'station', 'lead_time', 'ensemble'],\n",
-    "        name='forecast'\n",
+    "        coords={\"time\": time, \"station\": stations, \"lead_time\": lead_times_forecast, \"ensemble\": ensemble},\n",
+    "        dims=[\"time\", \"station\", \"lead_time\", \"ensemble\"],\n",
+    "        name=\"forecast\",\n",
     "    )\n",
     "\n",
     "    # Create observed DataArray\n",
     "    observed_da = xr.DataArray(\n",
     "        observed_data,\n",
-    "        coords={\n",
-    "            'time': time,\n",
-    "            'station': stations,\n",
-    "            'lead_time': lead_times_observed\n",
-    "        },\n",
-    "        dims=['time', 'station', 'lead_time'],\n",
-    "        name='observed'\n",
+    "        coords={\"time\": time, \"station\": stations, \"lead_time\": lead_times_observed},\n",
+    "        dims=[\"time\", \"station\", \"lead_time\"],\n",
+    "        name=\"observed\",\n",
     "    )\n",
     "\n",
-    "    return forecast_da, observed_da\n"
+    "    return forecast_da, observed_da"
    ]
   },
   {
@@ -526,8 +488,7 @@
     "forecast_ensemble_da, observed_da = create_synthetic_ensemble_data()\n",
     "\n",
     "# Display the DataArrays\n",
-    "#print(forecast_ensemble_da)\n",
-    "\n"
+    "# print(forecast_ensemble_da)"
    ]
   },
   {
@@ -560,6 +521,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
@@ -568,16 +536,16 @@
     "results_list = []\n",
     "\n",
     "# Iterate through each ensemble member and lead time\n",
-    "for imember in forecast_ensemble_da['ensemble'].values:\n",
-    "    for ilead in forecast_ensemble_da['lead_time'].values:\n",
+    "for imember in forecast_ensemble_da[\"ensemble\"].values:\n",
+    "    for ilead in forecast_ensemble_da[\"lead_time\"].values:\n",
     "        # Select the forecast data for the current ensemble member and lead time\n",
     "        cur_fcst_da = forecast_ensemble_da.sel(ensemble=imember, lead_time=ilead)\n",
-    "        \n",
+    "\n",
     "        # Calculate NSE value for the selected forecast data and observed data\n",
     "        nse_value = nse(cur_fcst_da, observed_da).values\n",
-    "        \n",
+    "\n",
     "        # Append the results as a dictionary to the list\n",
-    "        results_list.append({'ensemble': imember, 'lead_time': ilead, 'NSE': nse_value})\n",
+    "        results_list.append({\"ensemble\": imember, \"lead_time\": ilead, \"NSE\": nse_value})\n",
     "\n",
     "# Create a DataFrame from the list of dictionaries\n",
     "nse_results = pd.DataFrame(results_list)"
