Updating pandas references

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -257,7 +257,7 @@
 	month=mar, 
 	pages={359–378}
 }
-@software{pandas:2020,
+@software{the_pandas_development_team_2024_10957263,
 author = {The pandas development team},
 title = {pandas-dev/pandas: Pandas},
 month = feb,
@@ -268,12 +268,12 @@ doi = {10.5281/zenodo.3509134},
 url = {https://doi.org/10.5281/zenodo.3509134}
 }
 @InProceedings{ mckinney:2010,
-  author    = { {W}es {M}c{K}inney },
-  title     = { {D}ata {S}tructures for {S}tatistical {C}omputing in {P}ython },
-  booktitle = { {P}roceedings of the 9th {P}ython in {S}cience {C}onference },
+  author    = { Wes McKinney },
+  title     = { Data Structures for Statistical Computing in Python },
+  booktitle = { Proceedings of the 9th Python in Science Conference },
   pages     = { 56 - 61 },
   year      = { 2010 },
-  editor    = { {S}t\'efan van der {W}alt and {J}arrod {M}illman },
+  editor    = { St\'efan van der {W}alt and Jarrod Millman },
   doi       = { 10.25080/Majora-92bf1922-00a }
 }
 @software{geopandas:2020,
