--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -257,8 +257,8 @@
 	month=mar, 
 	pages={359–378}
 }
-@software{the_pandas_development_team_2024_10957263,
-author = {The pandas development team},
+@software{pandas:2024,
+author = {{The pandas development team}},
 title = {pandas-dev/pandas: Pandas},
 month = feb,
 year = 2020,
@@ -267,53 +267,14 @@ version = {latest},
 doi = {10.5281/zenodo.3509134},
 url = {https://doi.org/10.5281/zenodo.3509134}
 }
-@InProceedings{ mckinney:2010,
-  author    = { Wes McKinney },
+@InProceedings{McKinney:2010,
+  author    = { {W}es {M}c{K}inney },
   title     = { Data Structures for Statistical Computing in Python },
-  booktitle = { Proceedings of the 9th Python in Science Conference },
+  booktitle = { {P}roceedings of the 9th {P}ython in {S}cience {C}onference },
   pages     = { 56 - 61 },
   year      = { 2010 },
-  editor    = { St\'efan van der {W}alt and Jarrod Millman },
+  editor    = { {S}t\'efan van der {W}alt and {J}arrod {M}illman },
   doi       = { 10.25080/Majora-92bf1922-00a }
-}
-@software{geopandas:2020,
-  author       = {Kelsey Jordahl and
-                  Joris Van den Bossche and
-                  Martin Fleischmann and
-                  Jacob Wasserman and
-                  James McBride and
-                  Jeffrey Gerard and
-                  Jeff Tratner and
-                  Matthew Perry and
-                  Adrian Garcia Badaracco and
-                  Carson Farmer and
-                  Geir Arne Hjelle and
-                  Alan D. Snow and
-                  Micah Cochran and
-                  Sean Gillies and
-                  Lucas Culbertson and
-                  Matt Bartos and
-                  Nick Eubank and
-                  maxalbert and
-                  Aleksey Bilogur and
-                  Sergio Rey and
-                  Christopher Ren and
-                  Dani Arribas-Bel and
-                  Leah Wasser and
-                  Levi John Wolf and
-                  Martin Journois and
-                  Joshua Wilson and
-                  Adam Greenhall and
-                  Chris Holdgraf and
-                  Filipe and
-                  François Leblanc},
-  title        = {geopandas/geopandas: v0.8.1},
-  month        = jul,
-  year         = 2020,
-  publisher    = {Zenodo},
-  version      = {v0.8.1},
-  doi          = {10.5281/zenodo.3946761},
-  url          = {https://doi.org/10.5281/zenodo.3946761}
 }
 @software{geopandas:2024,
   author       = {Joris Van den Bossche and
