--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -268,12 +268,12 @@ doi = {10.5281/zenodo.3509134},
 url = {https://doi.org/10.5281/zenodo.3509134}
 }
 @InProceedings{McKinney:2010,
-  author    = { {W}es {M}c{K}inney },
+  author    = { Wes McKinney },
   title     = { Data Structures for Statistical Computing in Python },
   booktitle = { {P}roceedings of the 9th {P}ython in {S}cience {C}onference },
   pages     = { 56 - 61 },
   year      = { 2010 },
-  editor    = { {S}t\'efan van der {W}alt and {J}arrod {M}illman },
+  editor    = { St\'efan van der Walt and Jarrod Millman },
   doi       = { 10.25080/Majora-92bf1922-00a }
 }
 @software{geopandas:2024,
