Adding Dask citations

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -314,7 +314,21 @@ url = {https://doi.org/10.5281/zenodo.3509134}
   doi          = {10.5281/zenodo.11080352},
   url          = {https://doi.org/10.5281/zenodo.11080352}
 }
-
+@Manual{Dask:2016,
+  title = {Dask: Library for dynamic task scheduling},
+  author = {{Dask Development Team}},
+  year = {2016},
+  url = {http://dask.pydata.org},
+}
+@InProceedings{ Rocklin:2015,
+  author    = { Matthew Rocklin },
+  title     = { Dask: Parallel Computation with Blocked algorithms and Task Scheduling },
+  booktitle = { {P}roceedings of the 14th {P}ython in {S}cience {C}onference },
+  pages     = { 126 - 132 },
+  year      = { 2015 },
+  editor    = { Kathryn Huff and James Bergstra },
+  doi       = { 10.25080/Majora-7b98e3ed-013 }
+}
 
 
 
