--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -257,15 +257,15 @@
 	month=mar, 
 	pages={359–378}
 }
-@software{pandas:2020,
-author = {{The pandas development team}},
-title = {pandas-dev/pandas: Pandas},
-month = feb,
-year = 2020,
-publisher = {Zenodo},
-version = {latest},
-doi = {10.5281/zenodo.3509134},
-url = {https://doi.org/10.5281/zenodo.3509134}
+@software{pandas:2024,
+  author       = {{The pandas development team}},
+  title        = {pandas-dev/pandas: Pandas},
+  month        = apr,
+  year         = 2024,
+  publisher    = {Zenodo},
+  version      = {v2.2.2},
+  doi          = {10.5281/zenodo.10957263},
+  url          = {https://doi.org/10.5281/zenodo.10957263}
 }
 @InProceedings{McKinney:2010,
   author    = { Wes McKinney },
@@ -319,15 +319,6 @@ url = {https://doi.org/10.5281/zenodo.3509134}
   author = {{Dask Development Team}},
   year = {2016},
   url = {http://dask.pydata.org},
-}
-@InProceedings{ Rocklin:2015,
-  author    = { Matthew Rocklin },
-  title     = { Dask: Parallel Computation with Blocked algorithms and Task Scheduling },
-  booktitle = { {P}roceedings of the 14th {P}ython in {S}cience {C}onference },
-  pages     = { 126 - 132 },
-  year      = { 2015 },
-  editor    = { Kathryn Huff and James Bergstra },
-  doi       = { 10.25080/Majora-7b98e3ed-013 }
 }
 
 
