--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -257,3 +257,69 @@
 	month=mar, 
 	pages={359–378}
 }
+@software{pandas:2024,
+  author       = {{The pandas development team}},
+  title        = {pandas-dev/pandas: Pandas},
+  month        = apr,
+  year         = 2024,
+  publisher    = {Zenodo},
+  version      = {v2.2.2},
+  doi          = {10.5281/zenodo.10957263},
+  url          = {https://doi.org/10.5281/zenodo.10957263}
+}
+@InProceedings{McKinney:2010,
+  author    = { Wes McKinney },
+  title     = { Data Structures for Statistical Computing in Python },
+  booktitle = { {P}roceedings of the 9th {P}ython in {S}cience {C}onference },
+  pages     = { 56 - 61 },
+  year      = { 2010 },
+  editor    = { St\'efan van der Walt and Jarrod Millman },
+  doi       = { 10.25080/Majora-92bf1922-00a }
+}
+@software{geopandas:2024,
+  author       = {Joris Van den Bossche and
+                  Kelsey Jordahl and
+                  Martin Fleischmann and
+                  Matt Richards and
+                  James McBride and
+                  Jacob Wasserman and
+                  Adrian Garcia Badaracco and
+                  Alan D. Snow and
+                  Brendan Ward and
+                  Jeff Tratner and
+                  Jeffrey Gerard and
+                  Matthew Perry and
+                  Carson Farmer and
+                  Geir Arne Hjelle and
+                  Mike Taves and
+                  Ewout ter Hoeven and
+                  Micah Cochran and
+                  Ray Bell and
+                  rraymondgh and
+                  Matt Bartos and
+                  Pieter Roggemans and
+                  Lucas Culbertson and
+                  Giacomo Caria and
+                  Nick Eubank and
+                  sangarshanan and
+                  John Flavin and
+                  Sergio Rey and
+                  James Gardiner and
+                  Kaushik},
+  title        = {geopandas/geopandas: v0.14.4},
+  month        = apr,
+  year         = 2024,
+  publisher    = {Zenodo},
+  version      = {v0.14.4},
+  doi          = {10.5281/zenodo.11080352},
+  url          = {https://doi.org/10.5281/zenodo.11080352}
+}
+@Manual{Dask:2016,
+  title = {Dask: Library for dynamic task scheduling},
+  author = {{Dask Development Team}},
+  year = {2016},
+  url = {http://dask.pydata.org},
+}
+
+
+
