Update so that the bibtex label isn't also the DOI which was throwing the system

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -269,7 +269,7 @@
 	URL = {https://gmd.copernicus.org/articles/12/4185/2019/},
 	DOI = {10.5194/gmd-12-4185-2019}
 }
-@article{https://doi.org/10.1002/qj.4461,
+@article{Imhoff:2023,
 	author = {Imhoff, Ruben O. and De Cruz, Lesley and Dewettinck, Wout and Brauer, Claudia C. and Uijlenhoet, Remko and van Heeringen, Klaas-Jan and Velasco-Forero, Carlos and Nerini, Daniele and Van Ginderachter, Michiel and Weerts, Albrecht H.},
 	title = {Scale-dependent blending of ensemble rainfall nowcasts and numerical weather prediction in the open-source pysteps library},
 	journal = {Quarterly Journal of the Royal Meteorological Society},
