Add PyForecastTools to the related works section of the paper

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -346,6 +346,16 @@
   year = {2016},
   url = {http://dask.pydata.org},
 }
-
+@software{Morley:2020,
+  author       = {Steve Morley and
+                  Angeline Burrell},
+  title        = {drsteve/PyForecastTools: Version 1.1.1},
+  month        = apr,
+  year         = 2020,
+  publisher    = {Zenodo},
+  version      = {v1.1.1},
+  doi          = {10.5281/zenodo.3764117},
+  url          = {https://doi.org/10.5281/zenodo.3764117}
+}
 
 
