Add additional citations

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -357,5 +357,69 @@
   doi          = {10.5281/zenodo.3764117},
   url          = {https://doi.org/10.5281/zenodo.3764117}
 }
-
-
+@software{NetCDF:2024,
+  author       = {Unidata},
+  title        = {Network Common Data Form (NetCDF)},
+  year         = 2024,
+  publisher    = {UCAR/Unidata Program Center},
+  doi          = {10.5065/D6H70CW6},
+  url          = {http://doi.org/10.5065/D6H70CW6}
+}
+@misc{HDF5:2020,
+  title = {HDF5-Version 1.12.0},
+  author = {The HDF Group and Koziol, Quincey},
+  doi = {10.11578/dc.20180330.1},
+  url = {https://doi.org/10.11578/dc.20180330.1},
+  year = {2020},
+  month = {feb}
+}
+@software{zarr:2020,
+  author       = {Alistair Miles and
+                  John Kirkham and
+                  Martin Durant and
+                  James Bourbeau and
+                  Tarik Onalan and
+                  Joe Hamman and
+                  Zain Patel and
+                  shikharsg and
+                  Matthew Rocklin and
+                  raphael dussin and
+                  Vincent Schut and
+                  Elliott Sales de Andrade and
+                  Ryan Abernathey and
+                  Charles Noyes and
+                  sbalmer and
+                  pyup.io bot and
+                  Tommy Tran and
+                  Stephan Saalfeld and
+                  Justin Swaney and
+                  Josh Moore and
+                  Joe Jevnik and
+                  Jerome Kelleher and
+                  Jan Funke and
+                  George Sakkis and
+                  Chris Barnes and
+                  Anderson Banihirwe},
+  title        = {zarr-developers/zarr-python: v2.4.0},
+  month        = apr,
+  year         = 2020,
+  publisher    = {Zenodo},
+  version      = {v2.4.0},
+  doi          = {10.5281/zenodo.3773450},
+  url          = {https://doi.org/10.5281/zenodo.3773450}
+}
+@software{GRIB:2024,
+  title = {WMO No. 306 FM 92 GRIB (edition 2)},
+  author = {World Meteorological Organization},
+  publisher = {World Meteorological Organization},
+  url = {https://codes.wmo.int/grib2},
+  year = {2024},
+}
+@misc{Jupyter:2024,
+  title = {Jupyer Interactive Notebook},	
+  publisher = {GitHub},
+  author = {Jupyter Team},
+  journal = {GitHub repository},
+  url = {https://github.com/jupyter/notebook},
+  year = {2024},
+}
