Updates to the bibtex

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -367,7 +367,7 @@
 }
 @misc{HDF5:2020,
   title = {HDF5-Version 1.12.0},
-  author = {The HDF Group and Koziol, Quincey},
+  author = {{The HDF Group and Koziol, Quincey}},
   doi = {10.11578/dc.20180330.1},
   url = {https://doi.org/10.11578/dc.20180330.1},
   year = {2020},
@@ -410,7 +410,7 @@
 }
 @software{GRIB:2024,
   title = {WMO No. 306 FM 92 GRIB (edition 2)},
-  author = {World Meteorological Organization},
+  author = {{World Meteorological Organization}},
   publisher = {World Meteorological Organization},
   url = {https://codes.wmo.int/grib2},
   year = {2024},
@@ -418,7 +418,7 @@
 @misc{Jupyter:2024,
   title = {Jupyer Interactive Notebook},	
   publisher = {GitHub},
-  author = {Jupyter Team},
+  author = {{Jupyter Team}},
   journal = {GitHub repository},
   url = {https://github.com/jupyter/notebook},
   year = {2024},
