--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -423,3 +423,16 @@
   url = {https://github.com/jupyter/notebook},
   year = {2024},
 }
+@Article{BRIER_1950, 
+	title={VERIFICATION OF FORECASTS EXPRESSED IN TERMS OF PROBABILITY}, 
+	volume={78}, 
+	ISSN={1520-0493}, 
+	url={http://dx.doi.org/10.1175/1520-0493(1950)078<0001:vofeit>2.0.co;2}, 
+	DOI={10.1175/1520-0493(1950)078<0001:vofeit>2.0.co;2}, 
+	number={1}, 
+	journal={Monthly Weather Review}, 
+	publisher={American Meteorological Society}, 
+	author={BRIER, GLENN W.}, 
+	year={1950}, 
+	month=jan, 
+	pages={1–3} }
