--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -367,7 +367,7 @@
 }
 @misc{HDF5:2020,
   title = {HDF5-Version 1.12.0},
-  author = {{The HDF Group and Koziol, Quincey}},
+  author = {{The HDF Group} and Koziol, Quincey},
   doi = {10.11578/dc.20180330.1},
   url = {https://doi.org/10.11578/dc.20180330.1},
   year = {2020},
