--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -228,6 +228,7 @@
       eprint={2404.18429},
       archivePrefix={arXiv},
       primaryClass={physics.ao-ph},
+      publisher={arXiv}
 	  doi={10.48550/arXiv.2404.18429}
 }
 @article{Ferro_2013, 
@@ -301,44 +302,6 @@
   year      = { 2010 },
   editor    = { St\'efan van der Walt and Jarrod Millman },
   doi       = { 10.25080/Majora-92bf1922-00a }
-}
-@software{geopandas:2024,
-  author       = {Joris Van den Bossche and
-                  Kelsey Jordahl and
-                  Martin Fleischmann and
-                  Matt Richards and
-                  James McBride and
-                  Jacob Wasserman and
-                  Adrian Garcia Badaracco and
-                  Alan D. Snow and
-                  Brendan Ward and
-                  Jeff Tratner and
-                  Jeffrey Gerard and
-                  Matthew Perry and
-                  Carson Farmer and
-                  Geir Arne Hjelle and
-                  Mike Taves and
-                  Ewout ter Hoeven and
-                  Micah Cochran and
-                  Ray Bell and
-                  rraymondgh and
-                  Matt Bartos and
-                  Pieter Roggemans and
-                  Lucas Culbertson and
-                  Giacomo Caria and
-                  Nick Eubank and
-                  sangarshanan and
-                  John Flavin and
-                  Sergio Rey and
-                  James Gardiner and
-                  Kaushik},
-  title        = {geopandas/geopandas: v0.14.4},
-  month        = apr,
-  year         = 2024,
-  publisher    = {Zenodo},
-  version      = {v0.14.4},
-  doi          = {10.5281/zenodo.11080352},
-  url          = {https://doi.org/10.5281/zenodo.11080352}
 }
 @Manual{Dask:2016,
   title = {Dask: Library for dynamic task scheduling},
@@ -419,7 +382,6 @@
   title = {Jupyer Interactive Notebook},	
   publisher = {GitHub},
   author = {{Jupyter Team}},
-  journal = {GitHub repository},
   url = {https://github.com/jupyter/notebook},
   year = {2024},
 }
