--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -379,7 +379,7 @@
   year = {2024},
 }
 @misc{Jupyter:2024,
-  title = {Jupyer Interactive Notebook},	
+  title = {Jupyter Interactive Notebook},	
   publisher = {GitHub},
   author = {{Jupyter Team}},
   url = {https://github.com/jupyter/notebook},
