Added block_bootstrapping technique

--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -169,7 +169,10 @@
     ]
    },
    "source": [
-    "- [Isotonic Regression and Reliability Diagrams](./Isotonic_Regression_And_Reliability_Diagrams.ipynb)"
+    "\n",
+    "## Processing\n",
+    "- [Isotonic Regression and Reliability Diagrams](./Isotonic_Regression_And_Reliability_Diagrams.ipynb)\n",
+    "- [Block Bootstrapping](./Block_Bootstrapping.ipynb)"
    ]
   },
   {
