Apply suggestions from code review
Adjustments to markdown hints for capitalisation and citations

Co-authored-by: Stephanie Chong <168800785+Steph-Chong@users.noreply.github.com>
Signed-off-by: Tennessee Leeuwenburg <134973832+tennlee@users.noreply.github.com>

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -1,5 +1,5 @@
 @article{Brady:2021,
-	title        = {climpred: Verification of weather and climate forecasts},
+	title        = {{climpred: Verification of weather and climate forecasts}},
 	author       = {Riley X. Brady and Aaron Spring},
 	year         = 2021,
 	journal      = {Journal of Open Source Software},
@@ -11,7 +11,7 @@
 	url          = {https://doi.org/10.21105/joss.02781}
 }
 @article{Griffiths:2019,
-	title        = {Flip-Flop Index: Quantifying revision stability for fixed-event forecasts},
+	title        = {{Flip-Flop Index: Quantifying revision stability for fixed-event forecasts}},
 	author       = {Griffiths, Deryn and Foley, Michael and Ioannou, Ioanna and Leeuwenburg, Tennessee},
 	year         = 2019,
 	journal      = {Meteorological Applications},
@@ -25,7 +25,7 @@
 	abstract     = {The degree to which a forecast changes from one issue time to the next is an interesting aspect of a forecast system. Weather forecasters report that they are reluctant to change a forecast if they judge there is a risk of it being changed back again. They believe such instability detracts from the message being delivered and are reluctant to use automated guidance which they perceive as having lack of stability. A Flip-Flop Index was developed to quantify this characteristic of revisions of fixed-event forecasts. The index retains physically meaningful units, has a simple definition and does not penalize a sequence of forecasts that show a trend, which is important when assessing forecasts where a trend can be interpreted as a forecast becoming more confident with a shorter lead time. The Flip-Flop Index was used to compare the stability of sequences of automated guidance with the official Australian Bureau of Meteorology forecasts, which are prepared manually. The results show that the forecasts for chance of rain from the automated guidance are often more stable than the official, manual forecasts. However, the official forecasts for maximum temperature are more stable than those based on automated guidance. The Flip-Flop Index is independent of observations and does not measure skill, but it can play a complementary role in characterizing and evaluating a forecasting system.}
 }
 @misc{xskillscore,
-	title        = {xarray-contrib/xskillscore: Metrics for verifying forecasts},
+	title        = {{xarray-contrib/xskillscore: Metrics for verifying forecasts}},
 	author       = {Ray Bell and Aaron Spring and Riley Brady and Andrew Huang and Dougie Squire and Zachary Blackwood and Maximillian Cosmo Sitter and Taher Chegini.},
 	month        = aug,
 	year         = 2021,
@@ -34,7 +34,7 @@
 	url          = {https://github.com/xarray-contrib/xskillscore}
 }
 @article{Ehm:2016,
-	title        = {Of quantiles and expectiles: consistent scoring functions, Choquet representations and forecast rankings},
+	title        = {Of quantiles and expectiles: consistent scoring functions, {C}hoquet representations and forecast rankings},
 	author       = {Werner Ehm and Tilmann Gneiting and Alexander Jordan and Fabian Krüger},
 	year         = 2016,
 	journal      = {Journal of the Royal Statistical Society. Series B (Statistical Methodology)},
@@ -92,7 +92,7 @@
 	abstract     = {Given two sources of forecasts of the same quantity, it is possible to compare prediction records. In particular, it can be useful to test the hypothesis of equal accuracy in forecast performance. We analyse the behaviour of two possible tests, and of modifications of these tests designed to circumvent shortcomings in the original formulations. As a result of this analysis, a recommendation for one particular testing approach is made for practical applications.}
 }
 @article{Hoyer:2017,
-  title         = {xarray: N-D labeled Arrays and Datasets in Python},
+  title         = {{x}array: {N-D} labeled Arrays and Datasets in {P}ython},
   author        = {Hoyer, S. and Hamman, J.},
   year          = 2017,
   journal       = {Journal of Open Research Software},
@@ -112,7 +112,7 @@
 	doi          = {10.3386/t0169}
 }
 @Article{Brown:2021,
-	title	     = {The Model Evaluation Tools (MET): More than a decade of community-supported forecast verification},
+	title	     = {{The Model Evaluation Tools (MET):} More than a decade of community-supported forecast verification},
 	author       = {Brown, Barbara and Jensen, Tara and Gotway, John Halley and Bullock, Randy and Gilleland, Eric and Fowler, Tressa and Newman, Kathryn and Adriaansen, Dan and Blank, Lindsay and Burek, Tatiana and others},
 	journal      = {Bulletin of the American Meteorological Society},
 	volume       = {102},
@@ -211,7 +211,7 @@
   doi={10.1073/pnas.2016191118}
 }
 @article{griffiths2021circular,
-  title={Circular Flip-Flop Index: quantifying revision stability of forecasts of direction},
+  title={{Circular Flip-Flop Index:} quantifying revision stability of forecasts of direction},
   author={Griffiths, Deryn and Loveday, Nicholas and Price, Benjamin and Foley, Michael and McKelvie, Alistair},
   journal={Journal of Southern Hemisphere Earth Systems Science},
   volume={71},
@@ -222,7 +222,7 @@
   doi={10.1071/es21010}
 }
 @misc{loveday2024jive,
-      title={The Jive Verification System and its Transformative Impact on Weather Forecasting Operations}, 
+      title={The {Jive} Verification System and its Transformative Impact on Weather Forecasting Operations}, 
       author={Nicholas Loveday and Deryn Griffiths and Tennessee Leeuwenburg and Robert Taggart and Thomas C. Pagano and George Cheng and Kevin Plastow and Elizabeth Ebert and Cassandra Templeton and Maree Carroll and Mohammadreza Khanarmuei and Isha Nagpal},
       year={2024},
       eprint={2404.18429},
@@ -261,7 +261,7 @@
 }
 @article{gmd-12-4185-2019,
 	author = {Pulkkinen, S. and Nerini, D. and P\'erez Hortal, A. A. and Velasco-Forero, C. and Seed, A. and Germann, U. and Foresti, L.},
-	title = {Pysteps: an open-source Python library  for probabilistic precipitation nowcasting (v1.0)},
+	title = {Pysteps: an open-source {P}ython library  for probabilistic precipitation nowcasting (v1.0)},
 	JOURNAL = {Geoscientific Model Development},
 	VOLUME = {12},
 	YEAR = {2019},
@@ -296,7 +296,7 @@
 }
 @InProceedings{McKinney:2010,
   author    = { Wes McKinney },
-  title     = { Data Structures for Statistical Computing in Python },
+  title     = { Data Structures for Statistical Computing in {P}ython },
   booktitle = { {P}roceedings of the 9th {P}ython in {S}cience {C}onference },
   pages     = { 56 - 61 },
   year      = { 2010 },
