--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -180,13 +180,16 @@
     year 		 = {2022},   
     note 		 = {Accessed on September 9, 2023} 
 }
-@article{loveday2024user,
-  title={A User-Focused Approach to Evaluating Probabilistic and Categorical Forecasts},
-  author={Loveday, Nicholas and Taggart, Robert and Khanarmuei, Mohammadreza},
-  journal={Weather and Forecasting},
-  year={2024},
-  publisher={American Meteorological Society},
-  doi={10.1175/WAF-D-23-0201.1}
+@article{Loveday2024ts, 
+	title={A User-Focused Approach to Evaluating Probabilistic and Categorical Forecasts}, 
+	ISSN={1520-0434}, 
+	url={http://dx.doi.org/10.1175/waf-d-23-0201.1}, 
+	DOI={10.1175/waf-d-23-0201.1}, 
+	journal={Weather and Forecasting}, 
+	publisher={American Meteorological Society}, 
+	author={Loveday, Nicholas and Taggart, Robert and Khanarmuei, Mohammadreza}, 
+	year={2024}, 
+	month=may
 }
 @article{nipen2023verif,
   title={Verif: A weather-prediction verification tool for effective product development},
