Adds Gilbert (1884) citation to JOSS paper

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -402,3 +402,13 @@
 	month=jan, 
 	pages={1–3} 
 }
+@article{gilbert:1884,
+  title={Finley's tornado predictions},
+  author={Gilbert, Grove Karl},
+  journal={American Meteorological Journal},
+  volume={1},
+  number={5},
+  pages={166--172},
+  year={1884},
+  publisher={American Periodicals Series III}
+}
